# lmpthash

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh  run_large_trace.sh  run_small_trace.sh
example/: CMakeLists.txt  HiDPU_Simulator.c  clmpthash_test.c  ctest  eulor_config  femu_config  hidpu_host  latency  lmpthash_config  miss ratio  msr_config  no_linear_bucket  random_config  rebuild_ctest.sh  reconstruction & cache hit ratio  t  test.c  version mistach and latency
example/LearnedFTL/: ld-tpftl.c  ld-tpftl.h  util.c  util.h
example/configs/: trace_wdev  trace_web
example/grpc/: client.py  example.proto  example_pb2.py  example_pb2_grpc.py  server.py
include/: clmpthash.h  single_phf.hpp
include/builders/: external_memory_builder_partitioned_phf.hpp  external_memory_builder_single_phf.hpp  internal_memory_builder_single_phf.hpp  search.hpp  util.hpp
include/encoders/: bit_vector.hpp  compact_vector.hpp  encoders.hpp
include/pgm/: pgm_index.hpp
include/utils/: bucketers.hpp  logger.hpp
src/: clmpthash.cpp  example.cpp  lmpthash.hpp  util.hpp  utils.cpp
trace_gen/fio/: randread.fio  seqread.fio
